--- a/frontend/src/assets/css/damnstoryDetail.css
+++ b/frontend/src/assets/css/damnstoryDetail.css
@@ -1,6 +1,9 @@
+/* .damnstorydetailwhole {
+    margin-left: 200px;
+} */
 
 .damnstorydetailcontainer {
-    margin-left: 50px;
+    margin-left: 250px;
 }
 
 .damnstorydetail p {
@@ -113,4 +116,8 @@
 .comment-button {
     /* 이전 스타일 유지 */
     margin-left: 20px; /* 원하는 마진 값 설정 */
+}
+
+.comment-item {
+    margin-left: 100px;
 }
