--- a/frontend/src/assets/css/Chatting.css
+++ b/frontend/src/assets/css/Chatting.css
@@ -17,7 +17,7 @@
     display: flex;
     width: 100%;
     max-width: 600px;
-    height: 90%;
+    height: 100%;
     max-height: 380px;
 }
 
@@ -25,6 +25,7 @@
     border-radius: 7px;
     background-color: #F8F0EA;
     border: 4px solid #D9AA89;
+    height: 390px;
 }
 
 .chatting-label-style {
@@ -38,4 +39,16 @@
     margin-right: 5px;
     margin-top: 5px;
     font-size: 20px;
+}
+
+.chatting-content-box {
+    margin-left: 40px;
+    margin-top: 35px;
+    margin-bottom: 50px;
+    width: 480px;
+    margin-right: 22px;
+    height: 70px;
+    max-height: 70px;
+    border: 1px solid #797979;
+    border-radius: 5px;
 }
