채팅 css 수정중

--- a/frontend/src/assets/css/Chatting.css
+++ b/frontend/src/assets/css/Chatting.css
@@ -53,9 +53,10 @@
     border-radius: 5px;
 }
 
-.message-box {
-    /* display: inline-flex; */
-    /* flex-direction: column; */
+.chatting-message {
+    display: flex; 
+    align-items: center; 
+    justify-content: space-between;
 }
 
 .left-message {
