인재랭킹 수정 완료 .. 필터링 체크해야함

--- a/frontend/src/assets/css/Page3Header.css
+++ b/frontend/src/assets/css/Page3Header.css
@@ -160,6 +160,13 @@
   background-color: #bf5f4900;
 }
 
+.close-rank-gender {
+  right: 10px;
+  border: none;
+  color: #ce9a753f;
+  background-color: #bf5f4900;
+}
+
 .left-align-footer-rank {
   display: flex;
   flex-direction: row; /* Arrange items horizontally */
