채팅 토큰 에러 처리

--- a/frontend/src/assets/css/Chatting.css
+++ b/frontend/src/assets/css/Chatting.css
@@ -26,6 +26,7 @@
     background-color: #F8F0EA;
     border: 4px solid #D9AA89;
     height: 390px;
+    overflow-y: auto;
 }
 
 .chatting-label-style {
