채팅 안읽음 정렬 완료

--- a/frontend/src/assets/css/Chatting.css
+++ b/frontend/src/assets/css/Chatting.css
@@ -129,3 +129,12 @@
     color: red;
     margin-top: -5px;
 }
+
+.chatting-read-style1 {
+    margin-right: 15px;
+    flex-direction: column;
+    word-break: break-all;
+    font-size: 11px;
+    color: red;
+    margin-top: -5px;
+}
